--- a/public/style.css
+++ b/public/style.css
@@ -224,6 +224,12 @@ li.sort-list-item:first-child {
 .post-container {
   padding: 25px;
 }
+.post-detail-p{
+  border-bottom: 1px solid #e4e6e6;
+}
+.post-detail-p p {
+  -webkit-line-clamp: none !important;
+}
 .post {
   border-bottom: 4px solid #e4e6e6;
   margin-top: 40px;
@@ -305,6 +311,7 @@ ul.post-vote li i:hover {
   overflow: hidden;
 }
 footer.post-footer {
+  height: 60px;
   background-color: #f5f5f5;
   padding: 15px;
   margin: 30px 0 15px 15px;
@@ -315,7 +322,7 @@ footer.post-footer {
   background-color: #fff;
   border: 1px solid #d9dadb;
   font-size: 12px;
-  padding: 6px 10px;
+  padding: 4px 10px;
   color: #7c7f85;
 }
 .post-comment span {
@@ -327,12 +334,13 @@ footer.post-footer {
   border-radius: 2px;
   font-weight: 700;
   font-size: 14px;
-  padding: 6px 12px 9px 13px;
+  padding: 4px 12px 9px 13px;
   letter-spacing: 0.8px;
 }
 
 .post-answer-btn:hover {
   background-color: #2d6ff7;
+  color: #fff;
 }
 .post-container-footer {
   text-align: center;
@@ -379,7 +387,7 @@ footer.post-footer {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
   padding: 0 10px;
   font-size: 12px;
   line-height: 15px;
@@ -424,6 +432,11 @@ li.whatsapp {
 }
 li a i {
   color: #fff !important;
+}
+
+/* Comment */
+.comment-list-container {
+ 
 }
 /* Aside */
 
@@ -781,9 +794,9 @@ form .remember-me {
     background-color: transparent;
   }
 }
-@media screen and (max-width:405px){
-  .close-modal{
-    right:9%;
+@media screen and (max-width: 405px) {
+  .close-modal {
+    right: 9%;
   }
 }
 /* Utilies */
