--- a/public/style.css
+++ b/public/style.css
@@ -224,8 +224,8 @@ li.sort-list-item:first-child {
 .post-container {
   padding: 25px;
 }
-.post-detail-p{
-  border-bottom: 1px solid #e4e6e6;
+.post-detail-p {
+  border-bottom: 5px solid #e4e6e6;
 }
 .post-detail-p p {
   -webkit-line-clamp: none !important;
@@ -435,8 +435,88 @@ li a i {
 }
 
 /* Comment */
-.comment-list-container {
- 
+.comment {
+  border-width: 1px !important;
+  padding: 0 25px 30px;
+  margin-top: 25px !important;
+}
+.comment:last-child {
+  margin-bottom: 30px;
+}
+.comment-text {
+  margin-top: 5px;
+  font-size: 14px;
+  line-height: 24px;
+}
+.comment-meta .post-user-link {
+  display: block;
+}
+.comment-meta .meta-title {
+  padding: 0;
+}
+.comment-meta .meta-title:hover {
+  color: #000;
+}
+.load-more-comment {
+  width: 80%;
+}
+.comment-form {
+  padding: 15px 25px 0;
+  margin-bottom: 25px;
+  border-top: 1px solid #e4e6e6;
+}
+.comment-form > p {
+  padding:5px 0;
+  font-size: 14px;
+  font-weight: 700;
+  color: black;
+}
+.comment-form form div.textarea{
+  border: 1px solid #e1e3e3;
+  margin-bottom: 15px;
+}
+
+div.textarea p{
+  padding: 5px 10px;
+  color: #272930;
+  font-size:13px;
+  font-weight: 600;
+  background-color: #e1e3e3;
+}
+div.textarea p span{
+  font-weight: 500;
+  font-size:12px;
+}
+.comment-form textarea.comment-text {
+  width: 100%;
+  height: 135px;
+  border:none;
+  resize: vertical;
+  font-family: Consolas, Monaco, monospace;
+  font-size: 13px;
+  padding: 0 10px;
+}
+.default-btn.comment-submit-btn {
+  background-color: #2d6ff7;
+}
+.default-btn.comment-submit-btn:hover {
+  background-color: #7c7f85;
+}
+.comment-user-detail{
+  color:#272930;
+  font-weight: 400;
+  font-size: 13px;
+}
+.comment-user-detail i{
+  padding: 2px 8px 0 2px;
+}
+.comment-user-detail span{
+  color:#707885;
+  padding :2px 12px;
+}
+.comment-user-detail h6{
+  display: inline-block;
+  font-size:13px
 }
 /* Aside */
 
@@ -814,7 +894,9 @@ form .remember-me {
 .mt-2 {
   margin-top: 2rem;
 }
-
+.mb-2 {
+  margin-bottom: 2rem;
+}
 .fd-column {
   flex-direction: column;
 }
