--- a/public/style.css
+++ b/public/style.css
@@ -381,7 +381,7 @@ li.sort-list-item:first-child {
   border-bottom: 5px solid #e4e6e6;
 }
 .post-detail-p p {
-  -webkit-line-clamp: none !important;
+  -webkit-line-clamp: initial !important;
 }
 .post {
   border-bottom: 4px solid #e4e6e6;
@@ -447,6 +447,11 @@ ul.post-vote {
 }
 ul.post-vote li i {
   color: #707885 !important;
+  transition: all 1s ease;
+}
+ul.post-vote li i.active{
+  font-size: 22px;
+  color:#000 !important;
 }
 ul.post-vote li i:hover {
   color: black;
@@ -606,9 +611,6 @@ li a i {
   border-width: 1px !important;
   padding: 0 25px 30px;
   margin-top: 25px !important;
-}
-.comment:last-child {
-  margin-bottom: 30px;
 }
 .comment-text {
   margin-top: 5px;
@@ -1269,13 +1271,15 @@ ul.errors > li{
   .form-container2 {
     padding: 25px !important;
   }
-
   .post-actions {
     flex-direction: column;
   }
   .post-share {
     text-align: end;
     margin-top: 10px;
+  }
+  .users-container{
+    flex-direction: column;
   }
   .footer-container{
     flex-direction: column;
@@ -1295,6 +1299,32 @@ ul.errors > li{
   }
 }
 /* Utilies */
+.DraftEditor-root{
+  padding: 5px;
+  width: 100%;
+  height: 150px;
+  overflow-y: auto;
+}
+div.editor-wrapper{
+  border:1px solid #c1c1c1;
+  /* box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5); */
+}
+div.editor-toolbar{
+  border-bottom: 1px solid #c1c1c1;
+  padding:5px;
+}
+.DraftEditor-editorContainer,.notranslate.public-DraftEditor-content{
+  height: 100%;
+}
+button.editor-toolbar-btn{
+  border:none;
+  background: inherit;
+  padding: 5px 10px 5px 0;
+  font-size: 16px;
+}
+button.editor-toolbar-btn:hover{
+  cursor: pointer;
+}
 
 div.alert{
   width: 80%;
