--- a/public/style.css
+++ b/public/style.css
@@ -1299,31 +1299,81 @@ ul.errors > li{
   }
 }
 /* Utilies */
-.DraftEditor-root{
-  padding: 5px;
-  width: 100%;
-  height: 150px;
-  overflow-y: auto;
+.RichEditor-root {
+  background: #fff;
+  border: 1px solid #ddd;
+  font-family: 'Georgia', serif;
+  font-size: 14px;
+  padding: 15px;
 }
-div.editor-wrapper{
-  border:1px solid #c1c1c1;
-  /* box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5); */
-}
-div.editor-toolbar{
-  border-bottom: 1px solid #c1c1c1;
-  padding:5px;
-}
-.DraftEditor-editorContainer,.notranslate.public-DraftEditor-content{
-  height: 100%;
-}
-button.editor-toolbar-btn{
-  border:none;
-  background: inherit;
-  padding: 5px 10px 5px 0;
+
+.RichEditor-editor {
+  border-top: 1px solid #ddd;
+  cursor: text;
   font-size: 16px;
+  margin-top: 10px;
 }
-button.editor-toolbar-btn:hover{
+
+.RichEditor-editor .public-DraftEditorPlaceholder-root,
+.RichEditor-editor .public-DraftEditor-content {
+  margin: 0 -15px -15px;
+  padding: 15px;
+}
+
+.RichEditor-editor .public-DraftEditor-content {
+  min-height: 100px;
+}
+
+.RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
+  display: none;
+}
+
+.RichEditor-editor .RichEditor-blockquote {
+  border-left: 5px solid #eee;
+  color: #666;
+  font-family: 'Hoefler Text', 'Georgia', serif;
+  font-style: italic;
+  margin: 16px 0;
+  padding: 10px 20px;
+}
+.RichEditor-editor .RichEditor-list-item{
+  color:#000;
+  padding-left: 25px;
+  list-style-position: inside;
+}
+.RichEditor-editor .RichEditor-ol{
+  list-style-type: disc;
+}
+.RichEditor-editor .RichEditor-ul{
+  list-style-type: symbols;
+}
+.RichEditor-editor .public-DraftStyleDefault-block.public-DraftStyleDefault-ltr{
+  display: inline;
+}
+.RichEditor-editor .public-DraftStyleDefault-pre {
+  background-color: rgba(0, 0, 0, 0.05);
+  font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
+  font-size: 16px;
+  padding: 20px;
+}
+
+.RichEditor-controls {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 14px;
+  margin-bottom: 5px;
+  user-select: none;
+}
+
+.RichEditor-styleButton {
+  color: #999;
   cursor: pointer;
+  margin-right: 16px;
+  padding: 2px 0;
+  display: inline-block;
+}
+
+.RichEditor-activeButton {
+  color: #5890ff;
 }
 
 div.alert{
