--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ div.post-content div.text {
 }
 div.post-content div.text pre{
   word-break: break-word;
-  white-space:pre-wrap;
+  white-space:normal;
 }
 div.post-content div.text img {
   max-width: 100%;
@@ -740,7 +740,7 @@ div.post-footer {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: var(--normal-font-size);
   word-break: break-word;
-  white-space: pre-wrap;
+  white-space: normal;
 }
 /* Comment */
 .comment {
